--- a/PhotoSelect_Swift/Base.lproj/Main.storyboard
+++ b/PhotoSelect_Swift/Base.lproj/Main.storyboard
@@ -18,6 +18,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="th5-xa-3Dg">
+                                <rect key="frame" x="80" y="84" width="160" height="160"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="160" id="MwM-L6-4Va"/>
+                                    <constraint firstAttribute="height" constant="160" id="Nx6-EW-Nxb"/>
+                                </constraints>
+                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gnW-p8-Sz4">
                                 <rect key="frame" x="110" y="264" width="100" height="40"/>
                                 <color key="backgroundColor" red="0.95294117649999999" green="0.4549019608" blue="0.035294117649999998" alpha="1" colorSpace="calibratedRGB"/>
@@ -43,13 +50,16 @@
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="Hmj-T4-uJN" secondAttribute="trailing" constant="10" id="2hW-j9-vXN"/>
                             <constraint firstItem="Hmj-T4-uJN" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="10" id="CcR-Kf-peS"/>
+                            <constraint firstItem="gnW-p8-Sz4" firstAttribute="top" secondItem="th5-xa-3Dg" secondAttribute="bottom" constant="20" id="DZA-5j-OdG"/>
                             <constraint firstItem="gnW-p8-Sz4" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="EfF-X5-GOd"/>
                             <constraint firstItem="Hmj-T4-uJN" firstAttribute="top" secondItem="gnW-p8-Sz4" secondAttribute="bottom" constant="20" id="GmS-QJ-Kjd"/>
+                            <constraint firstItem="th5-xa-3Dg" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="k1I-hA-7Bk"/>
                             <constraint firstItem="gnW-p8-Sz4" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="kad-kn-rfT"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="filePathLabel" destination="Hmj-T4-uJN" id="lab-V5-m8i"/>
+                        <outlet property="imageView" destination="th5-xa-3Dg" id="8eh-qa-JOg"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
